fix classic overflow scroll issues

--- a/fancybox/1.5.2/jquery.fancybox.css
+++ b/fancybox/1.5.2/jquery.fancybox.css
@@ -15,17 +15,17 @@
  *	 http://www.gnu.org/licenses/gpl.html
  */
 
-html.fancybox-active, html.fancybox-active body {
+html.fancybox-active:not(.fancybox-allowscroll), html.fancybox-active:not(.fancybox-allowscroll) body {
 	touch-action: none;
 	overscroll-behavior: none;
 	-webkit-overflow-scrolling: auto;
 	overflow: hidden;
 }
-html.fancybox-active body {
+html.fancybox-active:not(.fancybox-allowscroll) body {
 	margin-right: var(--vertical-scrollbar);
 	margin-bottom: var(--horizontal-scrollbar);
 }
-html.fancybox-active body.rtl {
+html.fancybox-active:not(.fancybox-allowscroll) body.rtl {
 	margin-right: 0;
 	margin-left: var(--vertical-scrollbar);
 }
@@ -76,23 +76,24 @@ html.fancybox-active body.rtl {
 	box-shadow:0 0 20px #111;
 	-moz-box-shadow:0 0 20px #111;
 	-webkit-box-shadow:0 0 20px #111;
+	background: #fff;
 }
 
 #fancybox-content {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	-webkit-overflow-scrolling: touch;
-	overflow-y: auto;
+	overflow: hidden;
 	z-index: 111102;
 	border: 0px solid #fff;
 	background: #fff;
 	background-clip: padding-box;
 }
 
-#fancybox-content > div {
+#fancybox-content > * {
 	max-width: 100%;
 	max-height: 100%;
+	-webkit-overflow-scrolling: touch;
 }
 
 #fancybox-error {
